# pecuny

./: .env.test  .gitignore  .prettierignore  .pylintrc  .pylintrc.prod  Dockerfile  Monika.postman_collection.json  README.md  TODO.md  alembic.ini  dev-requirements.txt  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  example.env  pecuny.postman_collection.json  pyproject.toml  pytest.ini  pytype.toml  requirements.txt  tailwind.config.js
.github/workflows/: api-integration-tests.yml  cd.yml  ci-cd.yml  ci.yml  linting.yml  reusable-lint.yml  reusable-poetry-run.yml  reusable-test.yml
alembic/: env.py
alembic/versions/: 0c692cb41fa5_new_init.py  1ff68f765c15_add_frequency_data.py  2c009b44a28b_init.py  32645abd8a58_update_user_relationship.py  33d13485d33b_update_models.py  3ca97199de77_init_creation.py  3d95cdfbdd44_add_is_active_to_scheduled_transactions.py  4885a032ce2e_init.py  520aff94ac19_init_revision.py  544b25e4c6f6_cascade_on_delete.py  75a677d750b4_fixed_use_alter.py  7af3394f4c3b_added_is_income_to_.py  83be10279770_init.py  9694a1dffec2_remove_frequency_once_from_database.py  9972a1f4d6fc_init.py  b0e8bd74d3f8_make_user_id_optional_in_subcatories.py  b8097c295e4a_update_transaction_model.py  bca3fd7e27dd_add_categories_and_sections.py  c9de12976d24_new_init.py  dbce8a11ecc2_add_default_value_for_is_active.py  (+3 more)
app/: auth_manager.py  background_tasks.py  celery.py  config.py  database.py  date_manager.py  events.py  exception_handler.py  logger.py  main.py  middleware.py  models.py  oauth2.py  repository.py  routes.py  scheduled_tasks.py  schemas.py  session_transaction_manager.py  tasks.py  transaction_manager.py  utils.py
styles/: main.css
templates/: base.html
tests/: conftest.py  fixtures.py  form_utils.py  helpers.py  test_accounts.py  test_auth.py  test_transactions.py  test_users.py  utils.py
(+152 files in other folders)
